add apikey variable

--- a/public/config.json
+++ b/public/config.json
@@ -1,5 +1,6 @@
 {
   "cvUrl": "https://tmilost.github.io/Milos_Terzic_CV_Eng/",
   "linkedInUrl": "https://www.linkedin.com/in/milos-terzic-a60709183/",
-  "gitUrl": "https://github.com/tmilost"
+  "gitUrl": "https://github.com/tmilost",
+  "apikey": "568E6J3J3XHJZASJV21UFWDF8YKJG2G3JM"
 }
