--- a/public/config.json
+++ b/public/config.json
@@ -2,5 +2,6 @@
   "cvUrl": "https://tmilost.github.io/Milos_Terzic_CV_Eng/",
   "linkedInUrl": "https://www.linkedin.com/in/milos-terzic-a60709183/",
   "gitUrl": "https://github.com/tmilost",
+  "origintrailUrl": "https://origintrail.io/",
   "apikey": "568E6J3J3XHJZASJV21UFWDF8YKJG2G3JM"
 }
